k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planbsecurity-www
  labels:
    app.kubernetes.io/name: planbsecurity-www
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: planbsecurity-www
  ports:
    - name: http
      port: 80
      targetPort: http
